third_party/move/move-compiler-v2/tests/op-equal/invalid6.exp
// -- Model dump before first bytecode pipeline
module 0x42::test {
    private fun inc_new(x: &u256) {
        {
          let $t2: u256 = 1;
          {
            let $t1: &u256 = x;
            $t1 = Add<u256>(Deref($t1), $t2)
          }
        };
        Tuple()
    }
    private fun inc_old(x: &u256) {
        x = Add<u256>(Deref(x), 1);
        Tuple()
    }
} // end 0x42::test

// -- Sourcified model before first bytecode pipeline
module 0x42::test {
    fun inc_new(x: &u256) {
        {
            let _t2 = 1u256;
            let _t1 = x;
            *_t1 = *_t1 + _t2
        };
    }
    fun inc_old(x: &u256) {
        *x = *x + 1u256;
    }
}


Diagnostics:
error: expected `&mut` but found `&u256`
  ┌─ tests/op-equal/invalid6.move:3:10
  │
3 │         *x = *x + 1;
  │          ^

error: expected `&mut` but found `&u256`
  ┌─ tests/op-equal/invalid6.move:7:11
  │
7 │          *x += 1;
  │           ^
